:sparkles: one hot encoding

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,6 +22,42 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in [\"Division Name\", \"Department Name\", \"Class Name\"]:\n",
+    "    df_encoded = pd.get_dummies(\n",
+    "        csv_clothing_master[col].astype(str), prefix=col\n",
+    "    ).astype(int)\n",
+    "    csv_clothing_master = csv_clothing_master.drop(col, axis=1)\n",
+    "    csv_clothing_master = pd.concat([csv_clothing_master, df_encoded], axis=1)\n",
+    "\n",
+    "\n",
+    "def preprocess(x: pd.DataFrame) -> pd.DataFrame:\n",
+    "    x = x.copy()\n",
+    "    x = x.merge(csv_clothing_master, on=\"Clothing ID\")\n",
+    "    x = x.drop(\n",
+    "        [\n",
+    "            \"Title\",\n",
+    "            \"Review Text\",\n",
+    "        ],\n",
+    "        axis=1,\n",
+    "    )\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "train = preprocess(csv_train)\n",
+    "test = preprocess(csv_test)\n",
+    "\n",
+    "train_x, train_y = (\n",
+    "    train.drop([\"Recommended IND\", \"Rating\"], axis=1),  # TODO: utilize \"Rating\"\n",
+    "    train[\"Recommended IND\"],\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -38,30 +74,6 @@
     "\n",
     "L.seed_everything(42, workers=True)\n",
     "\n",
-    "\n",
-    "def preprocess(x: pd.DataFrame) -> pd.DataFrame:\n",
-    "    x = x.copy()\n",
-    "    x = x.merge(csv_clothing_master, on=\"Clothing ID\")\n",
-    "    x = x.drop(\n",
-    "        columns=[\n",
-    "            \"Title\",\n",
-    "            \"Review Text\",\n",
-    "            \"Division Name\",\n",
-    "            \"Department Name\",\n",
-    "            \"Class Name\",\n",
-    "        ]\n",
-    "    )\n",
-    "    return x\n",
-    "\n",
-    "\n",
-    "train = preprocess(csv_train)\n",
-    "test = preprocess(csv_test)\n",
-    "\n",
-    "train_x, train_y = (\n",
-    "    train.drop(columns=[\"Recommended IND\", \"Rating\"]),  # TODO: utilize \"Rating\"\n",
-    "    train[\"Recommended IND\"],\n",
-    ")\n",
-    "\n",
     "train_val = data.TensorDataset(\n",
     "    torch.tensor(train_x.values, dtype=torch.float32),\n",
     "    torch.tensor(train_y, dtype=torch.float32),\n",
@@ -77,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +114,28 @@
     "        inputs, target = batch\n",
     "        output = self(inputs)\n",
     "        loss = self.loss_fn(output, target)\n",
-    "        self.log(\"train_loss\", loss)\n",
+    "        self.log(\n",
+    "            \"train_loss\",\n",
+    "            loss,\n",
+    "            prog_bar=True,\n",
+    "            sync_dist=True,\n",
+    "            on_step=True,\n",
+    "            on_epoch=False,\n",
+    "        )\n",
     "        return loss\n",
     "\n",
     "    def validation_step(self, batch: list[torch.Tensor]) -> torch.Tensor:\n",
     "        inputs, target = batch\n",
     "        output = self(inputs)\n",
     "        loss = self.loss_fn(output, target)\n",
-    "        self.log(\"val_loss\", loss)\n",
+    "        self.log(\n",
+    "            \"val_loss\",\n",
+    "            loss,\n",
+    "            prog_bar=True,\n",
+    "            sync_dist=True,\n",
+    "            on_step=True,\n",
+    "            on_epoch=True,\n",
+    "        )\n",
     "        return loss\n",
     "\n",
     "    def predict_step(self, batch: list[torch.Tensor]) -> torch.Tensor:\n",
@@ -120,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,18 +157,17 @@
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
-      "/home/kira/ghq/github.com/ras0q/atmaCup17/.venv/lib/python3.12/site-packages/lightning/pytorch/trainer/connectors/logger_connector/logger_connector.py:75: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `lightning.pytorch` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
       "You are using a CUDA device ('NVIDIA GeForce RTX 3060 Ti') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name  | Type       | Params | Mode \n",
       "---------------------------------------------\n",
-      "0 | model | Sequential | 321    | train\n",
+      "0 | model | Sequential | 1.9 K  | train\n",
       "---------------------------------------------\n",
-      "321       Trainable params\n",
+      "1.9 K     Trainable params\n",
       "0         Non-trainable params\n",
-      "321       Total params\n",
-      "0.001     Total estimated model params size (MB)\n",
+      "1.9 K     Total params\n",
+      "0.008     Total estimated model params size (MB)\n",
       "4         Modules in train mode\n",
       "0         Modules in eval mode\n"
      ]
@@ -151,30 +176,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                                           "
+      "Sanity Checking DataLoader 0:   0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_292566/3452656499.py:28: UserWarning: Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  loss = self.loss_fn(output, target)\n",
-      "/home/kira/ghq/github.com/ras0q/atmaCup17/.venv/lib/python3.12/site-packages/lightning/pytorch/utilities/data.py:78: Trying to infer the `batch_size` from an ambiguous collection. The batch size we found is 3. To avoid any miscalculations, use `self.log(..., batch_size=batch_size)`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0:   0%|          | 6/9000 [00:00<02:18, 64.76it/s, v_num=10]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_292566/3452656499.py:21: UserWarning: Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_305961/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -182,21 +191,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 9000/9000 [00:42<00:00, 210.67it/s, v_num=10]"
+      "Epoch 0:   2%|▏         | 7/282 [00:00<00:04, 58.32it/s, v_num=2, train_loss=2.610]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=2` reached.\n"
+      "/tmp/ipykernel_305961/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  loss = self.loss_fn(output, target)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 9000/9000 [00:42<00:00, 210.64it/s, v_num=10]\n"
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 197.95it/s, v_num=2, train_loss=0.209] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_305961/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  loss = self.loss_fn(output, target)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:   0%|          | 0/282 [00:00<?, ?it/s, v_num=2, train_loss=0.209, val_loss_step=0.177, val_loss_epoch=0.200]           "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_305961/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  loss = self.loss_fn(output, target)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 168.00it/s, v_num=2, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=20` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 167.33it/s, v_num=2, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167]\n"
      ]
     }
    ],
@@ -204,9 +258,25 @@
     "model = LightningModel(\n",
     "    nn.Sequential(nn.Linear(len(train_x.columns), 64), nn.ReLU(), nn.Linear(64, 1))\n",
     ")\n",
-    "trainer = L.Trainer(accelerator=\"gpu\", max_epochs=2, log_every_n_steps=10, devices=1)\n",
     "\n",
-    "trainer.fit(model, train_dataloaders=dataset_train, val_dataloaders=dataset_val)"
+    "trainer = L.Trainer(\n",
+    "    accelerator=\"gpu\",\n",
+    "    max_epochs=20,\n",
+    "    log_every_n_steps=10,\n",
+    "    devices=1,\n",
+    ")\n",
+    "\n",
+    "batch_size = 32\n",
+    "num_workers = 2\n",
+    "trainer.fit(\n",
+    "    model,\n",
+    "    train_dataloaders=data.DataLoader(\n",
+    "        dataset_train, batch_size=batch_size, num_workers=num_workers, pin_memory=True\n",
+    "    ),\n",
+    "    val_dataloaders=data.DataLoader(\n",
+    "        dataset_val, batch_size=batch_size, num_workers=num_workers, pin_memory=True\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -225,18 +295,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 11155/11155 [00:11<00:00, 950.68it/s]\n"
+      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 530.75it/s]\n"
      ]
     }
    ],
    "source": [
-    "outputs = trainer.predict(model, dataloaders=dataset_test)\n",
+    "outputs = trainer.predict(\n",
+    "    model,\n",
+    "    data.DataLoader(\n",
+    "        dataset_test, batch_size=batch_size, num_workers=num_workers, pin_memory=True\n",
+    "    ),\n",
+    ")\n",
     "assert outputs is not None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,6 +322,43 @@
     "    writer = csv.writer(f)\n",
     "    writer.writerow([\"target\"])\n",
     "    writer.writerows([x.tolist() for x in outputs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-1c80317fa3b1799d\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-1c80317fa3b1799d\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6000;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%reload_ext tensorboard\n",
+    "%tensorboard --logdir=./ --port 6000"
    ]
   }
  ],
