--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,6 @@
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
-      "You are using a CUDA device ('NVIDIA GeForce RTX 3060 Ti') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name  | Type       | Params | Mode \n",
@@ -176,14 +175,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sanity Checking DataLoader 0:   0%|          | 0/2 [00:00<?, ?it/s]"
+      "                                                                           \r"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_305961/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_310034/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -191,14 +190,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   2%|▏         | 7/282 [00:00<00:04, 58.32it/s, v_num=2, train_loss=2.610]"
+      "Epoch 0:   0%|          | 0/282 [00:00<?, ?it/s] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_305961/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_310034/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -206,14 +205,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 197.95it/s, v_num=2, train_loss=0.209] "
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 196.23it/s, v_num=4, train_loss=0.209] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_305961/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_310034/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -221,14 +220,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1:   0%|          | 0/282 [00:00<?, ?it/s, v_num=2, train_loss=0.209, val_loss_step=0.177, val_loss_epoch=0.200]           "
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 173.07it/s, v_num=4, train_loss=0.209, val_loss_step=0.177, val_loss_epoch=0.200]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_305961/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_310034/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -236,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 168.00it/s, v_num=2, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167] "
+      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 167.28it/s, v_num=4, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167] "
      ]
     },
     {
@@ -250,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 167.33it/s, v_num=2, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167]\n"
+      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 166.54it/s, v_num=4, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167]\n"
      ]
     }
    ],
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 530.75it/s]\n"
+      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 469.25it/s]\n"
      ]
     }
    ],
@@ -311,22 +310,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import time\n",
+    "import numpy as np\n",
     "\n",
     "with open(path.join(data_dir, f\"submit_{int(time.time())}.csv\"), \"w\", newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerow([\"target\"])\n",
-    "    writer.writerows([x.tolist() for x in outputs])"
+    "    writer.writerows([[np.mean(x.tolist())] for x in outputs])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
