--- a/main.ipynb
+++ b/main.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
+    "now = int(time.time())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from os import path\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
@@ -20,10 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "scaler = preprocessing.StandardScaler()\n",
+    "\n",
     "for col in [\"Division Name\", \"Department Name\", \"Class Name\"]:\n",
     "    df_encoded = pd.get_dummies(\n",
     "        csv_clothing_master[col].astype(str), prefix=col\n",
@@ -37,11 +52,17 @@
     "    x = x.merge(csv_clothing_master, on=\"Clothing ID\")\n",
     "    x = x.drop(\n",
     "        [\n",
+    "            \"Clothing ID\",\n",
     "            \"Title\",\n",
     "            \"Review Text\",\n",
     "        ],\n",
     "        axis=1,\n",
     "    )\n",
+    "    cols = [\n",
+    "        \"Age\",\n",
+    "        \"Positive Feedback Count\",\n",
+    "    ]\n",
+    "    x[cols] = scaler.fit_transform(x[cols])\n",
     "    return x\n",
     "\n",
     "\n",
@@ -56,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mras0q\u001b[0m (\u001b[33mras0q-team\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: W&B API key is configured. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
       "/home/kira/ghq/github.com/ras0q/atmaCup17/.venv/lib/python3.12/site-packages/lightning/pytorch/utilities/parsing.py:208: Attribute 'model' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['model'])`.\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
@@ -177,7 +198,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>./wandb/run-20240831_185400-nqi0ewhg</code>"
+       "Run data is saved locally in <code>./wandb/run-20240831_191611-64s4hi5y</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -189,7 +210,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/ras0q-team/atmaCup17/runs/nqi0ewhg' target=\"_blank\">atmaCup17</a></strong> to <a href='https://wandb.ai/ras0q-team/atmaCup17' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/ras0q-team/atmaCup17/runs/64s4hi5y' target=\"_blank\">atmaCup17_1725099359</a></strong> to <a href='https://wandb.ai/ras0q-team/atmaCup17' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -213,7 +234,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/ras0q-team/atmaCup17/runs/nqi0ewhg' target=\"_blank\">https://wandb.ai/ras0q-team/atmaCup17/runs/nqi0ewhg</a>"
+       " View run at <a href='https://wandb.ai/ras0q-team/atmaCup17/runs/64s4hi5y' target=\"_blank\">https://wandb.ai/ras0q-team/atmaCup17/runs/64s4hi5y</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -235,7 +256,7 @@
       "1.9 K     Trainable params\n",
       "0         Non-trainable params\n",
       "1.9 K     Total params\n",
-      "0.008     Total estimated model params size (MB)\n",
+      "0.007     Total estimated model params size (MB)\n",
       "4         Modules in train mode\n",
       "0         Modules in eval mode\n"
      ]
@@ -251,7 +272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_326627/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_332478/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -266,7 +287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_326627/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_332478/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -274,14 +295,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 197.19it/s, v_num=ewhg, train_loss=0.209] "
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 173.25it/s, v_num=hi5y, train_loss=0.191] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_326627/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_332478/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -289,14 +310,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 174.21it/s, v_num=ewhg, train_loss=0.209, val_loss_step=0.177, val_loss_epoch=0.200]"
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 150.47it/s, v_num=hi5y, train_loss=0.191, val_loss_step=0.114, val_loss_epoch=0.146]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_326627/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_332478/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -304,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 282/282 [00:01<00:00, 148.96it/s, v_num=ewhg, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167] "
+      "Epoch 19: 100%|██████████| 282/282 [00:02<00:00, 135.12it/s, v_num=hi5y, train_loss=0.190, val_loss_step=0.115, val_loss_epoch=0.145] "
      ]
     },
     {
@@ -318,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 282/282 [00:02<00:00, 136.51it/s, v_num=ewhg, train_loss=0.189, val_loss_step=0.154, val_loss_epoch=0.167]\n"
+      "Epoch 19: 100%|██████████| 282/282 [00:02<00:00, 123.02it/s, v_num=hi5y, train_loss=0.190, val_loss_step=0.115, val_loss_epoch=0.145]\n"
      ]
     }
    ],
@@ -327,7 +348,7 @@
     "import wandb\n",
     "\n",
     "wandb.login()\n",
-    "logger = WandbLogger(name=\"atmaCup17\", project=\"atmaCup17\", log_model=\"all\")\n",
+    "logger = WandbLogger(name=f\"atmaCup17_{now}\", project=\"atmaCup17\", log_model=\"all\")\n",
     "\n",
     "model = LightningModel(\n",
     "    nn.Sequential(nn.Linear(len(train_x.columns), 64), nn.ReLU(), nn.Linear(64, 1))\n",
@@ -356,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 402.85it/s]\n"
+      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 448.23it/s]\n"
      ]
     }
    ],
@@ -386,15 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "import time\n",
     "import numpy as np\n",
     "\n",
-    "with open(path.join(data_dir, f\"submit_{int(time.time())}.csv\"), \"w\", newline=\"\") as f:\n",
+    "with open(path.join(data_dir, f\"submit_{now}.csv\"), \"w\", newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerow([\"target\"])\n",
     "    writer.writerows([[np.mean(x.tolist())] for x in outputs])"
