:wrench: update config

--- a/main.ipynb
+++ b/main.ipynb
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>./wandb/run-20240831_191611-64s4hi5y</code>"
+       "Run data is saved locally in <code>./wandb/run-20240831_192642-mei2u3w4</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/ras0q-team/atmaCup17/runs/64s4hi5y' target=\"_blank\">atmaCup17_1725099359</a></strong> to <a href='https://wandb.ai/ras0q-team/atmaCup17' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/ras0q-team/atmaCup17/runs/mei2u3w4' target=\"_blank\">atmaCup17_1725099991</a></strong> to <a href='https://wandb.ai/ras0q-team/atmaCup17' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -234,7 +234,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/ras0q-team/atmaCup17/runs/64s4hi5y' target=\"_blank\">https://wandb.ai/ras0q-team/atmaCup17/runs/64s4hi5y</a>"
+       " View run at <a href='https://wandb.ai/ras0q-team/atmaCup17/runs/mei2u3w4' target=\"_blank\">https://wandb.ai/ras0q-team/atmaCup17/runs/mei2u3w4</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -265,14 +265,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                                           \r"
+      "Sanity Checking DataLoader 0:   0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_332478/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_336103/2363724382.py:35: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -280,14 +280,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   0%|          | 0/282 [00:00<?, ?it/s] "
+      "Epoch 0:   1%|          | 2/282 [00:00<00:15, 18.32it/s, v_num=u3w4, train_loss=0.986]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_332478/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_336103/2363724382.py:21: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -295,14 +295,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 173.25it/s, v_num=hi5y, train_loss=0.191] "
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 187.41it/s, v_num=u3w4, train_loss=0.191] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_332478/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_336103/2363724382.py:21: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -310,14 +310,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 150.47it/s, v_num=hi5y, train_loss=0.191, val_loss_step=0.114, val_loss_epoch=0.146]"
+      "Epoch 0: 100%|██████████| 282/282 [00:01<00:00, 161.00it/s, v_num=u3w4, train_loss=0.191, val_loss_step=0.114, val_loss_epoch=0.146]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_332478/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "/tmp/ipykernel_336103/2363724382.py:35: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  loss = self.loss_fn(output, target)\n"
      ]
     },
@@ -325,21 +325,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 282/282 [00:02<00:00, 135.12it/s, v_num=hi5y, train_loss=0.190, val_loss_step=0.115, val_loss_epoch=0.145] "
+      "Epoch 199: 100%|██████████| 282/282 [00:01<00:00, 143.99it/s, v_num=u3w4, train_loss=0.192, val_loss_step=0.112, val_loss_epoch=0.145] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=20` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=200` reached.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 282/282 [00:02<00:00, 123.02it/s, v_num=hi5y, train_loss=0.190, val_loss_step=0.115, val_loss_epoch=0.145]\n"
+      "Epoch 199: 100%|██████████| 282/282 [00:02<00:00, 131.23it/s, v_num=u3w4, train_loss=0.192, val_loss_step=0.112, val_loss_epoch=0.145]\n"
      ]
     }
    ],
@@ -356,8 +356,8 @@
     "\n",
     "trainer = L.Trainer(\n",
     "    accelerator=\"gpu\",\n",
-    "    max_epochs=20,\n",
-    "    log_every_n_steps=10,\n",
+    "    max_epochs=50,\n",
+    "    log_every_n_steps=20,\n",
     "    devices=1,\n",
     "    logger=logger,\n",
     ")\n",
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 448.23it/s]\n"
+      "Predicting DataLoader 0: 100%|██████████| 349/349 [00:00<00:00, 452.30it/s]\n"
      ]
     }
    ],
