:wrench: ruff check

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,16 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os import path\n",
     "from pathlib import Path\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
-    "data_dir = path.join(Path().resolve(), \"data\")\n",
-    "dataset_dir = path.join(data_dir, \"dataset\")\n",
+    "data_dir = Path().cwd() / \"data\"\n",
+    "dataset_dir = data_dir / \"dataset\"\n",
     "\n",
-    "csv_train = pd.read_csv(path.join(dataset_dir, \"train.csv\"))\n",
-    "csv_test = pd.read_csv(path.join(dataset_dir, \"test.csv\"))\n",
-    "csv_clothing_master = pd.read_csv(path.join(dataset_dir, \"clothing_master.csv\"))"
+    "csv_train = pd.read_csv(dataset_dir / \"train.csv\")\n",
+    "csv_test = pd.read_csv(dataset_dir / \"test.csv\")\n",
+    "csv_clothing_master = pd.read_csv(dataset_dir / \"clothing_master.csv\")"
    ]
   },
   {
@@ -41,7 +41,8 @@
     "\n",
     "for col in [\"Division Name\", \"Department Name\", \"Class Name\"]:\n",
     "    df_encoded = pd.get_dummies(\n",
-    "        csv_clothing_master[col].astype(str), prefix=col\n",
+    "        csv_clothing_master[col].astype(str),\n",
+    "        prefix=col,\n",
     "    ).astype(int)\n",
     "    csv_clothing_master = csv_clothing_master.drop(col, axis=1)\n",
     "    csv_clothing_master = pd.concat([csv_clothing_master, df_encoded], axis=1)\n",
@@ -70,7 +71,7 @@
     "test = preprocess(csv_test)\n",
     "\n",
     "train_x, train_y = (\n",
-    "    train.drop([\"Recommended IND\", \"Rating\"], axis=1),  # TODO: utilize \"Rating\"\n",
+    "    train.drop([\"Recommended IND\", \"Rating\"], axis=1),\n",
     "    train[\"Recommended IND\"],\n",
     ")\n"
    ]
@@ -89,11 +90,11 @@
     }
    ],
    "source": [
+    "import lightning as pl\n",
     "import torch\n",
     "from torch.utils import data\n",
-    "import lightning as L\n",
     "\n",
-    "L.seed_everything(42, workers=True)\n",
+    "pl.seed_everything(42, workers=True)\n",
     "\n",
     "train_val = data.TensorDataset(\n",
     "    torch.tensor(train_x.values, dtype=torch.float32),\n",
@@ -103,7 +104,8 @@
     "train_size = int(len(train_val) * 0.9)\n",
     "val_size = len(train_val) - train_size\n",
     "dataset_train, dataset_val = data.random_split(\n",
-    "    train_val, lengths=[train_size, val_size]\n",
+    "    train_val,\n",
+    "    lengths=[train_size, val_size],\n",
     ")\n",
     "dataset_test = data.TensorDataset(torch.tensor(test.values, dtype=torch.float32))"
    ]
@@ -114,15 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch import optim, nn\n",
+    "from torch import nn, optim\n",
     "from torch.optim import optimizer\n",
     "\n",
     "\n",
-    "class LightningModel(L.LightningModule):\n",
-    "    def __init__(self, model: nn.Module):\n",
+    "class LightningModel(pl.LightningModule):\n",
+    "    def __init__(self, model: nn.Module) -> None:\n",
     "        super().__init__()\n",
     "        self.model = model\n",
-    "        self.loss_fn = nn.functional.mse_loss\n",
+    "        self.loss_fn = nn.functionapl.mse_loss\n",
     "        self.save_hyperparameters()\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
@@ -161,8 +163,7 @@
     "\n",
     "    def predict_step(self, batch: list[torch.Tensor]) -> torch.Tensor:\n",
     "        inputs, *_ = batch\n",
-    "        output = self(inputs)\n",
-    "        return output\n"
+    "        return self(inputs)\n"
    ]
   },
   {
@@ -345,16 +346,17 @@
    ],
    "source": [
     "from lightning.pytorch.loggers import WandbLogger\n",
+    "\n",
     "import wandb\n",
     "\n",
     "wandb.login()\n",
     "logger = WandbLogger(name=f\"atmaCup17_{now}\", project=\"atmaCup17\", log_model=\"all\")\n",
     "\n",
     "model = LightningModel(\n",
-    "    nn.Sequential(nn.Linear(len(train_x.columns), 64), nn.ReLU(), nn.Linear(64, 1))\n",
+    "    nn.Sequential(nn.Linear(len(train_x.columns), 64), nn.ReLU(), nn.Linear(64, 1)),\n",
     ")\n",
     "\n",
-    "trainer = L.Trainer(\n",
+    "trainer = pl.Trainer(\n",
     "    accelerator=\"gpu\",\n",
     "    max_epochs=50,\n",
     "    log_every_n_steps=20,\n",
@@ -367,10 +369,16 @@
     "trainer.fit(\n",
     "    model,\n",
     "    train_dataloaders=data.DataLoader(\n",
-    "        dataset_train, batch_size=batch_size, num_workers=num_workers, pin_memory=True\n",
+    "        dataset_train,\n",
+    "        batch_size=batch_size,\n",
+    "        num_workers=num_workers,\n",
+    "        pin_memory=True,\n",
     "    ),\n",
     "    val_dataloaders=data.DataLoader(\n",
-    "        dataset_val, batch_size=batch_size, num_workers=num_workers, pin_memory=True\n",
+    "        dataset_val,\n",
+    "        batch_size=batch_size,\n",
+    "        num_workers=num_workers,\n",
+    "        pin_memory=True,\n",
     "    ),\n",
     ")"
    ]
@@ -399,10 +407,15 @@
     "outputs = trainer.predict(\n",
     "    model,\n",
     "    data.DataLoader(\n",
-    "        dataset_test, batch_size=batch_size, num_workers=num_workers, pin_memory=True\n",
+    "        dataset_test,\n",
+    "        batch_size=batch_size,\n",
+    "        num_workers=num_workers,\n",
+    "        pin_memory=True,\n",
     "    ),\n",
     ")\n",
-    "assert outputs is not None"
+    "if outputs is None:\n",
+    "    msg = \"none output\"\n",
+    "    raise ValueError(msg)"
    ]
   },
   {
@@ -412,9 +425,10 @@
    "outputs": [],
    "source": [
     "import csv\n",
+    "\n",
     "import numpy as np\n",
     "\n",
-    "with open(path.join(data_dir, f\"submit_{now}.csv\"), \"w\", newline=\"\") as f:\n",
+    "with (data_dir / f\"submit_{now}.csv\").open(\"w\", newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerow([\"target\"])\n",
     "    writer.writerows([[np.mean(x.tolist())] for x in outputs])"
